# serializer version: 1
# name: test_escaping[this is a 'string': may contain one, or more, special characters]
  "this is a \\'string\\': may contain one\\, or more\\, special characters"
# ---
# name: test_escaping[this is a string[0]]
  'this is a string\\[0\\]'
# ---
